# web-discovery-mcp

./: .env.template  .gitignore  AGENTS.md  CRUSH.md  DISTRIBUTION.md  LLM_CONFIGURATION_SUMMARY.md  PUBLISHING.md  README.md  TEST-DESIGN-DOCUMENTATION.md  fastmcp.json  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
config/: default.yaml
docs/: architecture.md  brief.md  brownfield-architecture.md  comprehensive-implementation-plan.md  dev_context.md  integration-plan.md  llm-configuration.md  mcp-context.md  prd.md  stories-plan-summary.md  user_guide_mcp_agents.md  web_discovery_navigation_spec.md
docs/architecture/: coding-standards.md  epic-3-integration-spec.md  source-tree.md  tech-stack.md
docs/integration-specs/: step2-mcp-integration-spec.md  workflow-orchestration-spec.md
docs/process/: story-development-workflow.md
docs/stories/: 1.1.mcp-server-project-setup.md  1.2.health-check-and-diagnostic-tools.md  1.3.basic-configuration-management.md  1.4.url-discovery-and-sitemap-parsing.md  1.5.project-organization-and-file-structure.md  2.1.playwright-browser-session-management.md  2.2.page-navigation-and-content-extraction.md  2.3.network-traffic-monitoring.md  2.4.basic-page-interaction-automation.md  2.5.page-analysis-data-collection.md  2.6.sequential-navigation-workflow.md  3.1.multi-provider-llm-interface.md  3.2.configuration-based-model-selection.md  3.3.step-1-content-summarization-analysis.md  3.4.step-2-detailed-feature-analysis.md  3.5.context-passing-between-analysis-steps.md  3.6.analysis-quality-and-error-handling.md  3.7.step-2-feature-analysis-mcp-integration.md  4.1.real-time-progress-tracking-system.md  4.2.checkpoint-and-resume-functionality.md  4.3.structured-documentation-generation.md  4.4.mcp-artifact-organization-and-file-management.md  4.5.incremental-documentation-updates.md  5.1.interactive-mode-implementation.md  5.2.yolo-mode-implementation.md  (+8 more)
scripts/: README.md  check_env.py  create_sample_artifacts.py  debug_artifact_data.py  debug_assembler.py  debug_assembler_sections.py  demo_orchestration_real.py  demo_project_artifact_storage.py  diagnostics_client.py  manual_test.py  orchestration_usage_example.py  test.html  test_browser_session.py  test_discovery_direct.py  test_documentation_tools.py  test_documentation_tools_simple.py  test_feature_analyzer_story_3_7.py  test_feature_analyzer_with_real_llm.py  test_file_management.py  test_intelligent_analyze_site_real.py  test_mcp_client.py  test_network_monitoring.py  test_orchestration_story_6_4.py  test_orchestration_with_real_analysis.py  test_page_analysis.py  test_page_interaction.py  test_page_navigation.py  test_real_documentation.py  test_sequential_workflow.py  test_step1_summarize.py  test_story_3_5_e2e.py  verify_package.py
templates/: config.example.yaml
test-project/: .gitignore
(+215 files in other folders)
