[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legacy-web-mcp"
version = "0.1.0"
description = "Legacy Web Application Analysis MCP Server"
readme = "README.md"
authors = [
  { name = "Legacy Web MCP Team" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.12.0",
  "playwright>=1.55.0",
  "aiohttp>=3.12.0",
  "pydantic-settings>=2.10.0",
  "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0",
  "mypy>=1.8.0",
  "bandit>=1.7.5",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
target = ["src"]

[tool.coverage.run]
source = ["legacy_web_mcp"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
